# matvaretabellen-cli

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
data/en/: nutrients.json  rda.json  sources.json
data/nb/: nutrients.json  rda.json  sources.json
scripts/: refresh-data.sh
skills/mvt-food-lookup/: SKILL.md
skills/mvt-shared/: SKILL.md
src/: cli.rs  data.rs  main.rs  output.rs  rda.rs  search.rs  types.rs  update.rs
src/commands/: describe.rs  food_groups.rs  foods.rs  langual.rs  mod.rs  nutrients.rs  rda.rs  sources.rs
tests/: cli.rs
