[package]
name = "matvaretabellen-cli"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly CLI for the Norwegian Food Composition Table (matvaretabellen.no)"
license = "MIT"
repository = "https://github.com/alfredvc/matvaretabellen-cli"

[[bin]]
name = "mvt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
zstd = { version = "0.13", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
semver = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"

[build-dependencies]
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
